# mailctl

./: .gitignore  Cargo.toml  LICENSE  README.md  flickey.md
.github/workflows/: ci.yml  release.yml
src/: audit.rs  auth.rs  cache.rs  cli.rs  config.rs  error.rs  imap_client.rs  main.rs  mime.rs  model.rs  oauth.rs  provider.rs  retry.rs  smtp_client.rs
