[package]
name = "mailctl"
version = "0.1.3"
edition = "2024"
description = "An agent-first command-line email client for Gmail and Outlook/Hotmail"
license = "MIT"
repository = "https://github.com/agent-rt/mailctl"
readme = "README.md"
keywords = ["email", "imap", "smtp", "cli", "agent"]
categories = ["command-line-utilities", "email"]

[dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
imap = "2.4.1"
imap-proto = "0.10.2"
keyring = { version = "4.1.1", default-features = false, features = ["apple-native-keyring-store", "v1"] }
lettre = "0.11.22"
mail-parser = "0.11.3"
native-tls = "0.2.18"
rfc2047-decoder = "1.1.2"
rpassword = "7.5.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
toml = "1.1.2"
ureq = { version = "2", features = ["json"] }
urlencoding = "2.1.3"
utf7-imap = "0.3.2"
